# churn-prediction-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/churn/: __init__.py  __main__.py  cli.py  config.py  data.py  explain.py  features.py  metrics.py  model.py  plots.py
tests/: conftest.py  test_data.py  test_features.py  test_metrics.py  test_smoke.py
