[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "churn"
version = "0.1.0"
description = "Point-in-time churn prediction on synthetic gaming/fintech users."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aditya Singh Rathore", email = "adityasinh0707@gmail.com" }]
keywords = ["churn", "point-in-time", "lightgbm", "shap", "calibration"]

# Versions pinned for reproducibility. Resolved and tested on the CI target
# (CPython 3.11); all carry wheels for 3.11. numpy/scipy/shap are pinned to the
# newest releases that still publish 3.11 wheels (numpy 2.5.0, scipy 1.18.0 and
# shap 0.52.0 are 3.12+ only). On 3.11 `shap` pulls in `numba` automatically.
dependencies = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "pyarrow==24.0.0",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "matplotlib==3.11.0",
    "shap==0.51.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.20",
]

[project.scripts]
churn = "churn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["churn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
